--- a/codigo/index.html
+++ b/codigo/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/stylehome.css" />
+    <link rel="stylesheet" href="./assets/css/stylehome.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/codigo/assets/css/chat.css" />
+    <link rel="stylesheet" href="./assets/css/chat.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -57,35 +57,35 @@
                   <li>
                     <a
                       class="dropdown-item"
-                      href="pages/receitas_personalizadas.html"
+                      href="./pages/receitas_personalizadas.html"
                       >Receitas Saudáveis</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="pages/progresso.html"
+                    <a class="dropdown-item" href="./pages/progresso.html"
                       >Progresso</a
                     >
                   </li>
                   <li>
                     <a
                       class="dropdown-item"
-                      href="pages/localizacao_resturantes.html"
+                      href="./pages/localizacao_resturantes.html"
                       >Restaurantes</a
                     >
                   </li>
                   <li>
                     <a
                       class="dropdown-item"
-                      href="pages/localizacao_academias.html"
+                      href="./pages/localizacao_academias.html"
                       >Academias</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="pages/rotina.html">Rotina</a></li>
+                  <li><a class="dropdown-item" href="./pages/rotina.html">Rotina</a></li>
                   <li>
-                    <a class="dropdown-item" href="pages/dicas.html">Dicas</a>
+                    <a class="dropdown-item" href="./pages/dicas.html">Dicas</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="pages/treinos.html"
+                    <a class="dropdown-item" href="./pages/treinos.html"
                       >Treinos</a
                     >
                   </li>
@@ -95,7 +95,7 @@
             <div class="menu-right">
               <div class="login">
                 <ul>
-                  <li><a href="/codigo/pages/login.html">Login</a></li>
+                  <li><a href="./pages/login.html">Login</a></li>
                 </ul>
               </div>
               <div class="icon">
@@ -116,7 +116,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="assets/images/foto1.avif"
+                    src="./assets/images/foto1.avif"
                     class="d-block w-100 rounded-2"
                     alt="..."
                     style="height: 400px"
@@ -124,7 +124,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="assets/images/foto2.avif"
+                    src="./assets/images/foto2.avif"
                     class="d-block w-100 rounded-2"
                     alt="..."
                     style="height: 400px"
@@ -132,7 +132,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="assets/images/foto3.avif"
+                    src="./assets/images/foto3.avif"
                     class="d-block w-100 rounded-2"
                     alt="..."
                     style="height: 400px"
@@ -140,7 +140,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="assets/images/foto10.avif"
+                    src="./assets/images/foto10.avif"
                     class="d-block w-100 rounded-2"
                     alt="..."
                     style="height: 400px"
@@ -148,7 +148,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="assets/images/foto7.avif"
+                    src="./assets/images/foto7.avif"
                     class="d-block w-100 rounded-2"
                     alt="..."
                     style="height: 400px"
@@ -541,8 +541,8 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/codigo/assets/js/responses.js"></script>
-    <script src="/codigo/assets/js/chat.js"></script>
+    <script src="./assets/js/responses.js"></script>
+    <script src="./assets/js/chat.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
