--- a/codigo/pages/chatbot.html
+++ b/codigo/pages/chatbot.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHAT BOT</title>
 
-    <link rel="stylesheet" href="/codigo/assets/css/chat.css">
+    <link rel="stylesheet" href="./assets/css/chat.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
