--- a/codigo/index.html
+++ b/codigo/index.html
@@ -95,7 +95,7 @@
             <div class="menu-right">
               <div class="login">
                 <ul>
-                  <li><a href="./codigo/pages/login.html">Login</a></li>
+                  <li><a href="./pages/login.html">Login</a></li>
                 </ul>
               </div>
               <div class="icon">
