--- a/codigo/pages/receitas_personalizadas.html
+++ b/codigo/pages/receitas_personalizadas.html
@@ -9,8 +9,8 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/codigo/assets/css/stylereceitas.css" />
-    <link rel="stylesheet" href="/codigo/assets/css/styleprogresso.css" />
+    <link rel="stylesheet" href="../assets/css/stylereceitas.css" />
+    <link rel="stylesheet" href="../assets/css/styleprogresso.css" />
     <title>Receitas</title>
   </head>
   <body>
