--- a/codigo/pages/receitas_personalizadas.html
+++ b/codigo/pages/receitas_personalizadas.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"
-              ><img src="/codigo/assets/images/logo_remove_bg_2.png" alt="Logo"
+              ><img src="../assets/images/logo_remove_bg_2.png" alt="Logo"
             /></a>
             <button
               class="navbar-toggler"
