--- a/codigo/pages/receitas_personalizadas.html
+++ b/codigo/pages/receitas_personalizadas.html
@@ -53,7 +53,7 @@
                     <li>
                       <a
                         class="dropdown-item"
-                        href="/codigo/pages/receitas_personalizadas.html"
+                        href="../pages/receitas_personalizadas.html"
                         >Receitas Saudáveis</a
                       >
                     </li>
@@ -67,25 +67,25 @@
                     <li>
                       <a
                         class="dropdown-item"
-                        href="/codigo/pages/localizacao_resturantes.html"
+                        href="../pages/localizacao_resturantes.html"
                         >Restaurantes</a
                       >
                     </li>
                     <li>
                       <a
                         class="dropdown-item"
-                        href="/codigo/pages/localizacao_academias.html"
+                        href="../pages/localizacao_academias.html"
                         >Academias</a
                       >
                     </li>
-                    <li><a class="dropdown-item" href="/codigo/pages/rotina.html">Rotina</a></li>
+                    <li><a class="dropdown-item" href="../pages/rotina.html">Rotina</a></li>
                     <li>
-                      <a class="dropdown-item" href="/codigo/pages/dicas.html"
+                      <a class="dropdown-item" href="../pages/dicas.html"
                         >Dicas</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="/codigo/pages/treinos.html"
+                      <a class="dropdown-item" href="../pages/treinos.html"
                         >Treinos</a
                       >
                     </li>
@@ -95,7 +95,7 @@
               <div class="menu-right">
                 <div class="login">
                   <ul>
-                    <li><a href="/codigo/pages/login.html">Login</a></li>
+                    <li><a href="../pages/login.html">Login</a></li>
                   </ul>
                 </div>
                 <div class="icon">
