--- a/codigo/pages/login.html
+++ b/codigo/pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="/codigo/assets/css/stylelogin.css" />
+    <link rel="stylesheet" href="../assets/css/stylelogin.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -147,7 +147,7 @@
         </div>
       </div>
     </div>
-    <script src="/codigo/assets/js/login.js"></script>
+    <script src="../assets/js/login.js"></script>
     <script>
       // Declara uma função para processar o formulário de login
       function processaFormLogin(event) {
