--- a/codigo/pages/progresso.html
+++ b/codigo/pages/progresso.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/codigo/assets/css/styleprogresso.css" />
+    <link rel="stylesheet" href="../assets/css/styleprogresso.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,16 +11,16 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/codigo/assets/js/progresso.js"></script>
-    <script src="/codigo/assets/js/healthrds.js"></script>
+    <script src="../assets/js/progresso.js"></script>
+    <script src="../assets/js/healthrds.js"></script>
     <title>Progresso</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/codigo/index.html"
-            ><img src="/codigo/assets/images/logo_remove_bg_2.png" alt="Logo"
+          <a class="navbar-brand" href="../index.html"
+            ><img src="../assets/images/logo_remove_bg_2.png" alt="Logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -36,7 +36,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/codigo/index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -50,21 +50,21 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="/codigo/pages/receitas_personalizadas.html">Receitas Saudáveis</a>
+                    <a class="dropdown-item" href="../pages/receitas_personalizadas.html">Receitas Saudáveis</a>
                   </li>
-                  <li><a class="dropdown-item" href="/codigo/pages/progresso.html">Progresso</a></li>
-                  <li><a class="dropdown-item" href="/codigo/pages/localizacao_resturantes.html">Restaurantes</a></li>
-                  <li><a class="dropdown-item" href="/codigo/pages/localizacao_academias.html">Academias</a></li>
-                  <li><a class="dropdown-item" href="/codigo/pages/rotina.html">Rotina</a></li>
-                  <li><a class="dropdown-item" href="/codigo/pages/dicas.html">Dicas</a></li>
-                  <li><a class="dropdown-item" href="/codigo/pages/treinos.html">Treinos</a></li>
+                  <li><a class="dropdown-item" href="../pages/progresso.html">Progresso</a></li>
+                  <li><a class="dropdown-item" href="../pages/localizacao_resturantes.html">Restaurantes</a></li>
+                  <li><a class="dropdown-item" href="../pages/localizacao_academias.html">Academias</a></li>
+                  <li><a class="dropdown-item" href="../pages/rotina.html">Rotina</a></li>
+                  <li><a class="dropdown-item" href="../pages/dicas.html">Dicas</a></li>
+                  <li><a class="dropdown-item" href="../pages/treinos.html">Treinos</a></li>
                 </ul>
               </li>
             </ul>
             <div class="menu-right">
               <div class="login">
                 <ul>
-                  <li><a href="/codigo/pages/login.html">Login</a></li>
+                  <li><a href="../pages/login.html">Login</a></li>
                 </ul>
               </div>
               <div class="icon">
