--- a/codigo/pages/receitas_personalizadas.html
+++ b/codigo/pages/receitas_personalizadas.html
@@ -60,7 +60,7 @@
                     <li>
                       <a
                         class="dropdown-item"
-                        href="/codigo/pages/progresso.html"
+                        href="../pages/progresso.html"
                         >Progresso</a
                       >
                     </li>
