--- a/codigo/pages/localizacao_resturantes.html
+++ b/codigo/pages/localizacao_resturantes.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="..assets/css/stylerestaurantes.css" />
+    <link rel="stylesheet" href="../assets/css/stylerestaurantes.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="..assets/css/ol.css" />
+    <link rel="stylesheet" href="../assets/css/ol.css" />
 
     <link
       rel="stylesheet"
@@ -27,7 +27,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"
-            ><img src="..assets/images/logo_remove_bg_2.png" alt="Logo"
+            ><img src="../assets/images/logo_remove_bg_2.png" alt="Logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -59,33 +59,33 @@
                   <li>
                     <a
                       class="dropdown-item"
-                      href="..pages/receitas_personalizadas.html"
+                      href="../pages/receitas_personalizadas.html"
                       >Receitas Saudáveis</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="..pages/progresso.html"
+                    <a class="dropdown-item" href="../pages/progresso.html"
                       >Progresso</a
                     >
                   </li>
                   <li>
                     <a
                       class="dropdown-item"
-                      href="..pages/localizacao_resturantes.html"
+                      href="../pages/localizacao_resturantes.html"
                       >Restaurantes</a
                     >
                   </li>
                   <li>
                     <a
                       class="dropdown-item"
-                      href="..pages/localizacao_academias.html"
+                      href="../pages/localizacao_academias.html"
                       >Academias</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="..pages/rotina.html">Rotina</a></li>
-                  <li><a class="dropdown-item" href="..pages/dicas.html">Dicas</a></li>
+                  <li><a class="dropdown-item" href="../pages/rotina.html">Rotina</a></li>
+                  <li><a class="dropdown-item" href="../pages/dicas.html">Dicas</a></li>
                   <li>
-                    <a class="dropdown-item" href="..pages/treinos.html"
+                    <a class="dropdown-item" href="../pages/treinos.html"
                       >Treinos</a
                     >
                   </li>
@@ -95,7 +95,7 @@
             <div class="menu-right">
               <div class="login">
                 <ul>
-                  <li><a href="..pages/login.html">Login</a></li>
+                  <li><a href="../pages/login.html">Login</a></li>
                 </ul>
               </div>
               <div class="icon">
@@ -167,8 +167,8 @@
       </div>
     </footer>
 
-    <script src="..assets/js/localizacao_restaurantes.js"></script>
-    <script src="..assets/js/ol.js"></script>
+    <script src="../assets/js/localizacao_restaurantes.js"></script>
+    <script src="../assets/js/ol.js"></script>
     <script src="https://openlayers.org/en/latest/build/ol.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
