--- a/codigo/pages/localizacao_academias.html
+++ b/codigo/pages/localizacao_academias.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/codigo/assets/css/styleacademias.css" />
+  <link rel="stylesheet" href="../assets/css/styleacademias.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -13,7 +13,7 @@
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
   <title>Localização de Academias</title>
-  <script src="/codigo/assets/js/localizacao_academias.js"></script>
+  <script src="../assets/js/localizacao_academias.js"></script>
   
 </head>
 
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/codigo/index.html"><img src="/codigo/assets/images/logo_remove_bg_2.png" alt="Logo" /></a>
+        <a class="navbar-brand" href="../index.html"><img src="../assets/images/logo_remove_bg_2.png" alt="Logo" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/codigo/index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,21 +38,21 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="/codigo/pages/receitas_personalizadas.html">Receitas Saudáveis</a>
+                  <a class="dropdown-item" href="../pages/receitas_personalizadas.html">Receitas Saudáveis</a>
                 </li>
-                <li><a class="dropdown-item" href="/codigo/pages/progresso.html">Progresso</a></li>
-                <li><a class="dropdown-item" href="/codigo/pages/localizacao_resturantes.html">Restaurantes</a></li>
-                <li><a class="dropdown-item" href="/codigo/pages/localizacao_academias.html">Academias</a></li>
-                <li><a class="dropdown-item" href="/codigo/pages/rotina.html">Rotina</a></li>
-                <li><a class="dropdown-item" href="/codigo/pages/dicas.html">Dicas</a></li>
-                <li><a class="dropdown-item" href="/codigo/pages/treinos.html">Treinos</a></li>
+                <li><a class="dropdown-item" href="../pages/progresso.html">Progresso</a></li>
+                <li><a class="dropdown-item" href="../pages/localizacao_resturantes.html">Restaurantes</a></li>
+                <li><a class="dropdown-item" href="../pages/localizacao_academias.html">Academias</a></li>
+                <li><a class="dropdown-item" href="../pages/rotina.html">Rotina</a></li>
+                <li><a class="dropdown-item" href="../pages/dicas.html">Dicas</a></li>
+                <li><a class="dropdown-item" href="../pages/treinos.html">Treinos</a></li>
               </ul>
             </li>
           </ul>
           <div class="menu-right">
             <div class="login">
               <ul>
-                <li><a href="/codigo/pages/login.html">Login</a></li>
+                <li><a href="../pages/login.html">Login</a></li>
               </ul>
             </div>
             <div class="icon">
