--- a/codigo/pages/dicas.html
+++ b/codigo/pages/dicas.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/codigo/assets/css/stylesdicas.css" />
-    <link rel="stylesheet" href="/codigo/assets/css/styleprogresso.css" />
+    <link rel="stylesheet" href="../assets/css/stylesdicas.css" />
+    <link rel="stylesheet" href="../assets/css/styleprogresso.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +19,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"
-            ><img src="/codigo/assets/images/logo_remove_bg_2.png" alt="Logo"
+            ><img src="../assets/images/logo_remove_bg_2.png" alt="Logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -50,33 +50,33 @@
                   <li>
                     <a
                       class="dropdown-item"
-                      href="/codigo/pages/receitas_personalizadas.html"
+                      href="../pages/receitas_personalizadas.html"
                       >Receitas Saudáveis</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="/codigo/pages/progresso.html"
+                    <a class="dropdown-item" href="../pages/progresso.html"
                       >Progresso</a
                     >
                   </li>
                   <li>
                     <a
                       class="dropdown-item"
-                      href="/codigo/pages/localizacao_resturantes.html"
+                      href="../pages/localizacao_resturantes.html"
                       >Restaurantes</a
                     >
                   </li>
                   <li>
                     <a
                       class="dropdown-item"
-                      href="/codigo/pages/localizacao_academias.html"
+                      href="../pages/localizacao_academias.html"
                       >Academias</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="/codigo/pages/rotina.html">Rotina</a></li>
-                  <li><a class="dropdown-item" href="/codigo/pages/dicas.html">Dicas</a></li>
+                  <li><a class="dropdown-item" href="../pages/rotina.html">Rotina</a></li>
+                  <li><a class="dropdown-item" href="../pages/dicas.html">Dicas</a></li>
                   <li>
-                    <a class="dropdown-item" href="/codigo/pages/treinos.html"
+                    <a class="dropdown-item" href="../pages/treinos.html"
                       >Treinos</a
                     >
                   </li>
@@ -86,7 +86,7 @@
             <div class="menu-right">
               <div class="login">
                 <ul>
-                  <li><a href="/codigo/pages/login.html">Login</a></li>
+                  <li><a href="../pages/login.html">Login</a></li>
                 </ul>
               </div>
               <div class="icon">
@@ -135,6 +135,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="/codigo/assets/js/dicas.js"></script>
+    <script src="../assets/js/dicas.js"></script>
   </body>
 </html>
