--- a/codigo/pages/dicas.html
+++ b/codigo/pages/dicas.html
@@ -11,7 +11,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Progresso</title>
+    <title>Dicas</title>
   </head>
 
   <body>
