--- a/codigo/index.html
+++ b/codigo/index.html
@@ -80,7 +80,11 @@
                       >Academias</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="./pages/rotina.html">Rotina</a></li>
+                  <li>
+                    <a class="dropdown-item" href="./pages/rotina.html"
+                      >Rotina</a
+                    >
+                  </li>
                   <li>
                     <a class="dropdown-item" href="./pages/dicas.html">Dicas</a>
                   </li>
@@ -280,6 +284,7 @@
           </div>
           <div class="col-12 text-center rounded-2 mt-5">
             <iframe
+              class="embed-responsive-item"
               width="560"
               height="315"
               src="https://www.youtube.com/embed/g3qjAI4CfQM?si=zPFD2v9bvUurh3yt&start=10"
