--- a/codigo/pages/login.html
+++ b/codigo/pages/login.html
@@ -39,7 +39,7 @@
                   <input type="text" name="password" id="password" class="form-control" />
                 </div>
                 <div class="form-group text-right">
-                  <input type="submit" name="submit" class="btn btn-info btn-md" value="submit" />
+                  <input type="submit" name="submit" class="btn btn-info btn-md" value="Login" />
                   <button type="button" class="btn btn-info" data-toggle="modal" data-target="#loginModal">
                     Novo usuário
                   </button>
@@ -49,8 +49,6 @@
           </div>
         </div>
       </div>
-
-    <!-- Modal -->
     <div
       class="modal fade"
       id="loginModal"
@@ -149,30 +147,23 @@
     </div>
     <script src="../assets/js/login.js"></script>
     <script>
-      // Declara uma função para processar o formulário de login
       function processaFormLogin(event) {
-        // Cancela a submissão do formulário para tratar sem fazer refresh da tela
         event.preventDefault();
 
-        // Obtem os dados de login e senha a partir do formulário de login
         var username = document.getElementById("username").value;
         var password = document.getElementById("password").value;
 
-        // Valida login e se estiver ok, redireciona para tela inicial da aplicação
         resultadoLogin = loginUser(username, password);
         if (resultadoLogin) {
           window.location.href = "../index.html";
         } else {
-          // Se login falhou, avisa ao usuário
           alert("Usuário ou senha incorretos");
         }
       }
 
       function salvaLogin(event) {
-        // Cancela a submissão do formulário para tratar sem fazer refresh da tela
         event.preventDefault();
 
-        // Obtem os dados do formulário
         let login = document.getElementById("txt_login").value;
         let nome = document.getElementById("txt_nome").value;
         let email = document.getElementById("txt_email").value;
@@ -183,21 +174,16 @@
           return;
         }
 
-        // Adiciona o usuário no banco de dados
         addUser(nome, login, senha, email);
         alert("Usuário salvo com sucesso. Proceda com o login para ");
 
-        // Oculta a div modal do login
-        //document.getElementById ('loginModal').style.display = 'none';
         $("#loginModal").modal("hide");
       }
 
-      // Associa a funçao processaFormLogin  formulário adicionado um manipulador do evento submit
       document
         .getElementById("login-form")
         .addEventListener("submit", processaFormLogin);
 
-      // Associar salvamento ao botao
       document
         .getElementById("btn_salvar")
         .addEventListener("click", salvaLogin);
