--- a/codigo/pages/dicas.html
+++ b/codigo/pages/dicas.html
@@ -4,125 +4,77 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/stylesdicas.css" />
-    <link rel="stylesheet" href="../assets/css/styleprogresso.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Dicas</title>
-  </head>
-
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"
-            ><img src="../assets/images/logo_remove_bg_2.png" alt="Logo"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                  >Categorias</a
-                >
-                <ul class="dropdown-menu">
-                  <li>
-                    <a
-                      class="dropdown-item"
-                      href="../pages/receitas_personalizadas.html"
-                      >Receitas Saudáveis</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="../pages/progresso.html"
-                      >Progresso</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      class="dropdown-item"
-                      href="../pages/localizacao_resturantes.html"
-                      >Restaurantes</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      class="dropdown-item"
-                      href="../pages/localizacao_academias.html"
-                      >Academias</a
-                    >
-                  </li>
-                  <li><a class="dropdown-item" href="../pages/rotina.html">Rotina</a></li>
-                  <li><a class="dropdown-item" href="../pages/dicas.html">Dicas</a></li>
-                  <li>
-                    <a class="dropdown-item" href="../pages/treinos.html"
-                      >Treinos</a
-                    >
-                  </li>
-                </ul>
-              </li>
-            </ul>
-            <div class="menu-right">
-              <div class="login">
-                <ul>
-                  <li><a href="../pages/login.html">Login</a></li>
-                </ul>
-              </div>
-              <div class="icon">
-                <a href="#"
-                  ><ion-icon name="person-circle-outline"></ion-icon
-                ></a>
-              </div>
+</head>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"
+          ><img src="../assets/images/logo_remove_bg_2.png" alt="Logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Categorias
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="../pages/receitas_personalizadas.html">Receitas Saudáveis</a>
+                </li>
+                <li><a class="dropdown-item" href="../pages/progresso.html">Progresso</a></li>
+                <li><a class="dropdown-item" href="../pages/localizacao_resturantes.html">Restaurantes</a></li>
+                <li><a class="dropdown-item" href="../pages/localizacao_academias.html">Academias</a></li>
+                <li><a class="dropdown-item" href="../pages/rotina.html">Rotina</a></li>
+                <li><a class="dropdown-item" href="../pages/dicas.html">Dicas</a></li>
+                <li><a class="dropdown-item" href="../pages/treinos.html">Treinos</a></li>
+              </ul>
+            </li>
+          </ul>
+          <div class="menu-right">
+            <div class="login">
+              <ul>
+                <li><a href="../pages/login.html">Login</a></li>
+              </ul>
+            </div>
+            <div class="icon">
+              <a href="#">
+                <ion-icon name="person-circle-outline"></ion-icon>
+              </a>
             </div>
           </div>
         </div>
-      </nav>
-    </header>
-
-    <div class="container">
-      <form id="formDica">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" required />
-
-        <label for="data">Data:</label>
-        <input type="date" id="data" required />
-
-        <label for="tema">Tema da Dica:</label>
-        <input type="text" id="tema" required />
-
-        <label for="descricao">Dica:</label>
-        <textarea id="descricao" rows="4" required></textarea>
-
-        <button type="button" onclick="adicionarDica()">Adicionar Dica</button>
-      </form>
-
-      <div class="dicas-container" id="dicasContainer">
-        <!-- Dicas serão exibidas aqui -->
       </div>
-    </div>
+    </nav>
+  </header>
 
-    <script
+  <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
@@ -134,7 +86,33 @@
     <script
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
-    <script src="../assets/js/dicas.js"></script>
-  </body>
+  ></script>
+
+  <div id="tips">
+    <h2>Dicas para hábitos saudáveis</h2>
+    <form id="tipForm">
+      <label for="name">Nome:</label>
+      <input type="text" id="name" required><br><br>
+      <label for="date">Data:</label>
+      <input type="date" id="date" required><br><br>
+      <label for="subject">Assunto:</label>
+      <input type="text" id="subject" required><br><br>
+      <label for="tip">Dica:</label><br>
+      <textarea id="tip" rows="4" cols="50" required></textarea><br><br>
+      <button type="submit">Enviar Dica</button>
+    </form>
+    <div id="tipSection"></div>
+  </div>
+
+  <div id="comments">
+    <h2>Comentários</h2>
+      <label for="commentText">Comentário:</label><br>
+      <textarea id="commentText" rows="4" cols="50" required></textarea><br><br>
+      <button type="submit">Publicar Comentário</button>
+    </form>
+    <div id="commentSection"></div>
+  </div>
+
+  <script src="scripts.js"></script>
+</body>
 </html>
