--- a/codigo/pages/dicas.html
+++ b/codigo/pages/dicas.html
@@ -113,6 +113,6 @@
     <div id="commentSection"></div>
   </div>
 
-  <script src="scripts.js"></script>
+  <script src="../assets/js/dicas.js"></script>
 </body>
 </html>
