--- a/codigo/pages/login.html
+++ b/codigo/pages/login.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="form-group">
                   <label for="password" class="text-dark">Senha</label><br />
-                  <input type="text" name="password" id="password" class="form-control" />
+                  <input type="password" name="password" id="password" class="form-control" />
                 </div>
                 <div class="form-group text-right">
                   <input type="submit" name="submit" class="btn btn-info btn-md" value="Login" />
